<resources>
    <string name="app_name">My Application</string>
    <string name="api_key">adc541d09fb64a3ea57b7f9004d338be</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_video_acitivity">VideoAcitivity</string>
    <string name="not_yet_registered">Bạn chưa có tài khoản ? Đăng ký ngay</string>
    <string name="confirmation_password">Xác nhận mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="name_signup">Họ và tên</string>
</resources>