<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="669dp"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:layout_gravity="start"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="24dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple"
                    android:layout_marginTop="40dp"
                    android:hint="@string/username"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple"
                    android:layout_marginTop="40dp"
                    android:hint="@string/password"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="true"
                    />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:shadowRadius="@integer/material_motion_duration_long_1"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:background="@drawable/gradient"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/not_yet_registered"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:id="@+id/signupText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/signupButtonInLogin"
            android:text="@string/signup"
            android:textSize="18sp"
            android:layout_marginLeft="54dp"
            android:layout_marginRight="54dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:background="@drawable/gradient"
            app:backgroundTint="@null"/>
    </LinearLayout>


    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

</LinearLayout>