<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="669dp"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <EditText
                    android:id="@+id/name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_outline_24"
                    android:hint="@string/name_signup"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple" />

                <EditText
                    android:id="@+id/username_signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple" />

                <EditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple"
                    app:passwordToggleEnabled="true"
                    tools:ignore="DuplicateIds" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:hint="@string/confirmation_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple"
                    app:passwordToggleEnabled="true" />

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/gradient"
                    android:shadowRadius="@integer/material_motion_duration_long_1"
                    android:text="Signup"
                    android:textSize="18sp"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

</LinearLayout>